# ES-Reporter

./: .dockerignore  .env  .gitignore  Dockerfile  INTERNATIONALIZATION.md  README-zh.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_web.py  test_filename_generation.py  test_html_conversion.py  test_md_to_html.py  test_report_generation.py  test_s3_upload.py
src/: __init__.py  data_loader.py  env_loader.py  es_inspector.py  html_converter.py  i18n.py  main.py  report_generator.py  s3_uploader.py
src/modules/: __init__.py  cluster_basic_info.py  data_governance.py  executive_summary.py  index_analysis.py  log_analysis.py  node_info.py  report_overview.py
templates/: diagnostic_guide.html  index.html  report_template.md  terms_of_use.html
